amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/introspection-field-input-type.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/introspection-field-input-type.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/introspection-field-input-type.api.graphql#/declares/shape/Person/property/property/__name
  Property: http://www.w3.org/ns/shacl#name
  Range: [(10,4)-(10,10)]
  Location: 
